--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -34,7 +34,7 @@ body {
     text-align: left;
     font-family: Arial, Gadget, sans-serif;
     color: #FFF;
-    font-size: 8pt;
+    font-size: 10pt;
     font-weight: bold;
     padding-left: 0px;
 }
@@ -88,6 +88,19 @@ body {
     font-weight: bold;
     font-size: 9pt;
     color: #FF0;        
+}
+#user_menu a{
+    font-family: Arial, Gadget, sans-serif;
+    font-weight: bold; 
+    font-size: 9pt;
+    color: #FF0;
+}
+#user_menu_aux {
+    font-family: Arial, Gadget, sans-serif;
+    font-weight: normal;
+    font-size: 9pt;
+    color: #ccc;
+
 }
 #content h2,p {
     font-family: Arial, Gadget, sans-serif;
@@ -189,7 +202,7 @@ body {
     font-family: Arial, Gadget, sans-serif;
     color: #FF0;
     font-size: 8pt;
-    text-align:left;
+    text-align: center;
     font-weight:bold;
     border: solid #FF0;
     border-width: 0 1px 1px 1px 
@@ -257,7 +270,6 @@ body {
     width: 320px;
     padding-left: 10px;
 }
-
 .content_add_to_cart {
     margin: 0 auto;
     width: 200px;
@@ -276,9 +288,6 @@ body {
     font-weight:bold;
     text-decoration: none;
 }
-
-
-
 
 
 
@@ -314,4 +323,60 @@ body {
     color: #000;
     
 }
+
+
+
+
+#hor-minimalist-a
+{
+    font-family: Arial, Gadget, sans-serif;
+    font-size: 12px;
+    background: #fff;
+    width: 530px;
+    border-collapse: collapse;
+    text-align: left;
+    margin: 0 auto;
+}
+#hor-minimalist-a th
+{
+    font-size: 9pt;
+    font-weight: bold;
+    color: #F00;
+    padding: 1px 1px;
+    border-bottom: 2px solid #FF0;
+}
+#hor-minimalist-a td
+{
+    color: #000;
+    padding: 5px 1px 0px 8px;
+}
+#hor-minimalist-a tbody tr:hover td
+{
+    color: #F00;
+}
+
+
+#customer_info
+{
+    font-family: Arial, Gadget, sans-serif;
+    font-size: 12px;
+    background: #fff;
+    width: 530px;
+    border-collapse: collapse;
+    text-align: left;
+    margin: 0 auto;
+}
+#customer_info th
+{
+    font-size: 9pt;
+    font-weight: bold;
+    color: #F00;
+    border-bottom: 1px solid #000;
+}
+#customer_info td
+{
+    color: #000;
+    padding: 5px 1px 0px 8px;
+}
+
 
